# CLinear

./: .clang-format  .gitignore  CMakeLists.txt  Readme.md  conanfile.txt  main.cc
core/: CMakeLists.txt  Matrix.h
core/base/: BaseStore.h  Constant.h  Memory.h  Micros.h
core/utils/: ThreadPool.hpp
test/: CMakeLists.txt  data_storage.cc  thread_pool_test.cc
